--- a/templates/base/base_components/footer_copyright.html
+++ b/templates/base/base_components/footer_copyright.html
@@ -1,9 +1,10 @@
 {% load static %}
 
+<!--Copyright-->
 <div class="footer-copyright py-3 text-center">
     <div class="container-fluid">
-        &copy; 2019 Copyright:
-        <a href="https://mdbootstrap.com/docs/jquery/"> MDBootstrap.com </a>
+        © 2019 Copyright: <a href="https://mdbootstrap.com/docs/jquery/"> MDBootstrap.com </a>
 
     </div>
 </div>
+<!--/.Copyright-->
