--- a/templates/base/base_components/footer_links.html
+++ b/templates/base/base_components/footer_links.html
@@ -1,14 +1,13 @@
 {% load static %}
 
+<!--Footer Links-->
 <div class="container">
     <div class="row">
 
         <!--First column-->
-        <div class="col-md-3 mr-auto">
-            <h5 class="text-uppercase mb-3">Footer Content</h5>
-            <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet,
-                consectetur
-                adipisicing elit.</p>
+        <div class="col-md-3">
+            <h5 class="text-uppercase">Footer Content </h5>
+            <p>Here you can use rows and columns here to organize your footer content.</p>
         </div>
         <!--/.First column-->
 
@@ -16,20 +15,12 @@
 
         <!--Second column-->
         <div class="col-md-2 ml-auto">
-            <h5 class="text-uppercase mb-3">Links</h5>
+            <h5 class="text-uppercase">Links</h5>
             <ul class="list-unstyled">
-                <li>
-                    <a href="#!">Link 1</a>
-                </li>
-                <li>
-                    <a href="#!">Link 2</a>
-                </li>
-                <li>
-                    <a href="#!">Link 3</a>
-                </li>
-                <li>
-                    <a href="#!">Link 4</a>
-                </li>
+                <li><a href="#!">Link 1</a></li>
+                <li><a href="#!">Link 2</a></li>
+                <li><a href="#!">Link 3</a></li>
+                <li><a href="#!">Link 4</a></li>
             </ul>
         </div>
         <!--/.Second column-->
@@ -38,20 +29,12 @@
 
         <!--Third column-->
         <div class="col-md-2 ml-auto">
-            <h5 class="text-uppercase mb-3">Links</h5>
+            <h5 class="text-uppercase">Links</h5>
             <ul class="list-unstyled">
-                <li>
-                    <a href="#!">Link 1</a>
-                </li>
-                <li>
-                    <a href="#!">Link 2</a>
-                </li>
-                <li>
-                    <a href="#!">Link 3</a>
-                </li>
-                <li>
-                    <a href="#!">Link 4</a>
-                </li>
+                <li><a href="#!">Link 1</a></li>
+                <li><a href="#!">Link 2</a></li>
+                <li><a href="#!">Link 3</a></li>
+                <li><a href="#!">Link 4</a></li>
             </ul>
         </div>
         <!--/.Third column-->
@@ -59,24 +42,19 @@
         <hr class="w-100 clearfix d-md-none">
 
         <!--Fourth column-->
-        <div class="col-md-3 ml-auto">
-            <h5 class="text-uppercase mb-3">Links</h5>
+        <div class="col-md-2 ml-auto">
+            <h5 class="text-uppercase">Links</h5>
             <ul class="list-unstyled">
-                <li>
-                    <a href="#!">Link 1</a>
-                </li>
-                <li>
-                    <a href="#!">Link 2</a>
-                </li>
-                <li>
-                    <a href="#!">Link 3</a>
-                </li>
-                <li>
-                    <a href="#!">Link 4</a>
-                </li>
+                <li><a href="#!">Link 1</a></li>
+                <li><a href="#!">Link 2</a></li>
+                <li><a href="#!">Link 3</a></li>
+                <li><a href="#!">Link 4</a></li>
             </ul>
         </div>
         <!--/.Fourth column-->
 
     </div>
 </div>
+
+
+
