--- a/templates/base/base_components/footer_social_buttons.html
+++ b/templates/base/base_components/footer_social_buttons.html
@@ -1,33 +1,34 @@
 {% load static %}
 
-<div class="social-section text-center">
-    <ul class="list-unstyled list-inline">
+<div class="container">
+    <!--Grid row-->
+    <div class="row mb-3">
 
-        <li class="list-inline-item">
-            <a class="btn-floating btn-fb">
-                <i class="fab fa-facebook-f"> </i>
-            </a>
-        </li>
-        <li class="list-inline-item">
-            <a class="btn-floating btn-tw">
-                <i class="fab fa-twitter"> </i>
-            </a>
-        </li>
-        <li class="list-inline-item">
-            <a class="btn-floating btn-gplus">
-                <i class="fab fa-google-plus-g"> </i>
-            </a>
-        </li>
-        <li class="list-inline-item">
-            <a class="btn-floating btn-li">
-                <i class="fab fa-linkedin-in"> </i>
-            </a>
-        </li>
-        <li class="list-inline-item">
-            <a class="btn-floating btn-dribbble">
-                <i class="fab fa-dribbble"> </i>
-            </a>
-        </li>
+        <!--First column-->
+        <div class="col-md-12">
 
-    </ul>
+            <ul class="list-unstyled d-flex justify-content-center mb-0 py-4 list-inline">
+                <li class="list-inline-item"><a class="p-2 m-2 fa-lg fb-ic"><i
+                        class="fab fa-facebook-f white-text fa-lg">
+                </i></a></li>
+                <li class="list-inline-item"><a class="p-2 m-2 fa-lg tw-ic"><i
+                        class="fab fa-twitter white-text fa-lg"> </i></a></li>
+                <li class="list-inline-item"><a class="p-2 m-2 fa-lg gplus-ic"><i
+                        class="fab fa-google-plus-g white-text fa-lg">
+                </i></a></li>
+                <li class="list-inline-item"><a class="p-2 m-2 fa-lg li-ic"><i
+                        class="fab fa-linkedin-in white-text fa-lg">
+                </i></a></li>
+                <li class="list-inline-item"><a class="p-2 m-2 fa-lg ins-ic"><i
+                        class="fab fa-instagram white-text fa-lg">
+                </i></a></li>
+                <li class="list-inline-item"><a class="p-2 m-2 fa-lg pin-ic"><i
+                        class="fab fa-pinterest white-text fa-lg">
+                </i></a></li>
+            </ul>
+
+        </div>
+        <!--/First column-->
+    </div>
+    <!--/Grid row-->
 </div>
