--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en" class="">
+{% extends 'base/base.html' %}
 
-<head>
-  <!-- Required meta tags always come first -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design Bootstrap Template</title>
+{% load static %}
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-  <!-- Bootstrap core CSS -->
-  <link href="../css/bootstrap.min.css" rel="stylesheet">
-  <!-- Material Design Bootstrap -->
-  <link href="../css/mdb.min.css" rel="stylesheet">
+{% block title %}
+    {{ block.super }}
+{% endblock %}
 
+{% block content %}
   <style>
 
     html,
@@ -87,67 +79,7 @@
 
     </style>
 
-</head>
-
 <body>
-
-
-  <!--Main Navigation-->
-  <header>
-
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-      <div class="container">
-        <a class="navbar-brand" href="#"><strong>MDB</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
-          aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
-            </li>
-          </ul>
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Intro Section -->
-    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(https://mdbootstrap.com/img/Photos/Others/img%20%2848%29.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-      <div class="mask rgba-black-light">
-        <div class="container h-100 d-flex justify-content-center align-items-center">
-          <div class="row pt-5 mt-3">
-            <div class="col-md-12">
-              <div class="text-center">
-                <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-3 wow fadeInDown" data-wow-delay="0.3s"><strong>welcome
-                    to my blog</strong></h1>
-                <hr class="hr-light mt-4 wow fadeInDown" data-wow-delay="0.4s">
-                <h5 class="text-uppercase mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Photography &
-                    design</strong></h5>
-                <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">portfolio</a>
-                <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">About me</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </header>
-  <!--Main Navigation-->
-
 
   <!--Main Layout-->
   <main>
@@ -424,107 +356,4 @@
   </main>
   <!--Main Layout-->
 
-
-  <!--Footer-->
-  <footer class="page-footer pt-4 mt-4   text-center text-md-left">
-
-    <!--Footer Links-->
-    <div class="container">
-      <div class="row">
-
-        <!--First column-->
-        <div class="col-md-3">
-          <h5 class="text-uppercase font-weight-bold">About author </h5>
-          <p>Here you can use rows and columns here to organize your footer content.</p>
-        </div>
-        <!--/.First column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Second column-->
-        <div class="col-md-2 ml-auto">
-          <h5 class="text-uppercase font-weight-bold">Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#!">Link 1</a></li>
-            <li><a href="#!">Link 2</a></li>
-            <li><a href="#!">Link 3</a></li>
-            <li><a href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <!--/.Second column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Third column-->
-        <div class="col-md-2 ml-auto">
-          <h5 class="text-uppercase font-weight-bold">Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#!">Link 1</a></li>
-            <li><a href="#!">Link 2</a></li>
-            <li><a href="#!">Link 3</a></li>
-            <li><a href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <!--/.Third column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Fourth column-->
-        <div class="col-md-2 ml-auto">
-          <h5 class="text-uppercase font-weight-bold">Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#!">Link 1</a></li>
-            <li><a href="#!">Link 2</a></li>
-            <li><a href="#!">Link 3</a></li>
-            <li><a href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <!--/.Fourth column-->
-
-      </div>
-    </div>
-    <!--/.Footer Links-->
-
-    <hr>
-
-    <!--Social buttons-->
-    <div class="text-center mb-3">
-
-      <a class="btn-floating btn-fb"><i class="fab fa-facebook-f"> </i></a>
-      <a class="btn-floating btn-tw"><i class="fab fa-twitter"> </i></a>
-      <a class="btn-floating btn-gplus"><i class="fab fa-google-plus-g"> </i></a>
-      <a class="btn-floating btn-li"><i class="fab fa-linkedin-in"> </i></a>
-      <a class="btn-floating btn-dribbble"><i class="fab fa-dribbble"> </i></a>
-
-    </div>
-    <!--/.Social buttons-->
-
-    <!--Copyright-->
-    <div class="footer-copyright py-3 text-center">
-      <div class="container-fluid">
-        © 2015 Copyright: <a href="https://mdbootstrap.com/docs/jquery/"> MDBootstrap.com </a>
-
-      </div>
-    </div>
-    <!--/.Copyright-->
-
-  </footer>
-  <!--/.Footer-->
-
-
-  <!--  SCRIPTS  -->
-  <!-- JQuery -->
-  <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="../js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="../js/mdb.min.js"></script>
-  <script>
-    new WOW().init();
-
-  </script>
-</body>
-
-</html>
+{% endblock %}
