--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -1,148 +1,16 @@
-<!DOCTYPE html>
-<html lang="en" class="full-height">
+{% extends 'base/base.html' %}
 
-<head>
-  <!-- Required meta tags always come first -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design Bootstrap Template</title>
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-  <!-- Bootstrap core CSS -->
-  <link href="../css/bootstrap.min.css" rel="stylesheet">
-  <!-- Material Design Bootstrap -->
-  <link href="../css/mdb.min.css" rel="stylesheet">
-  <style>
+{% load static %}
 
-    html,
-        body,
-        header,
-        .jarallax {
-          height: 700px;
-        }
+{% block title %}
+    {{ block.super }}
+{% endblock %}
 
-        @media (max-width: 740px) {
-          html,
-          body,
-          header,
-          .jarallax {
-            height: 100vh;
-          }
-        }
-
-        @media (min-width: 800px) and (max-width: 850px) {
-          html,
-          body,
-          header,
-          .jarallax {
-            height: 100vh;
-          }
-        }
-
-        @media (min-width: 560px) and (max-width: 650px) {
-          header .jarallax h1 {
-            margin-bottom: .5rem !important;
-          }
-          header .jarallax h5 {
-            margin-bottom: .5rem !important;
-          }
-        }
-
-
-        @media (min-width: 660px) and (max-width: 700px) {
-          header .jarallax h1 {
-            margin-bottom: 1.5rem !important;
-          }
-          header .jarallax h5 {
-            margin-bottom: 1.5rem !important;
-          }
-        }
-
-        .top-nav-collapse {
-            background-color: #9da4b1 !important;
-        }
-        .navbar:not(.top-nav-collapse) {
-            background: transparent !important;
-        }
-        @media (max-width: 768px) {
-            .navbar:not(.top-nav-collapse) {
-                background: #9da4b1 !important;
-            }
-        }
-
-        @media (min-width: 800px) and (max-width: 850px) {
-            .navbar:not(.top-nav-collapse) {
-                background: #9da4b1!important;
-            }
-        }
-
-        footer.page-footer {
-            background-color: #9da4b1;
-        }
-
-    </style>
-</head>
+{% block content %}
 
 <body>
 
-  <!--Main Navigation-->
-  <header>
 
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-      <div class="container">
-        <a class="navbar-brand" href="#"><strong>MDB</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
-          aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
-            </li>
-          </ul>
-          <form class="form-inline">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Intro Section -->
-    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient2.png'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-      <div class="mask rgba-purple-slight">
-        <div class="container h-100 d-flex justify-content-center align-items-center">
-          <div class="row pt-5 mt-3">
-            <div class="col-md-12 wow fadeIn mb-3">
-              <div class="text-center">
-                <h1 class="display-4 font-weight-bold mb-5 wow fadeInUp">Our New Course is Ready</h1>
-                </li>
-                <h5 class="mb-5 wow fadeInUp" data-wow-delay="0.2s">It comes with a lot of new features, easy to follow
-                  videos and images. Check it out now!</h5>
-                <div class="wow fadeInUp" data-wow-delay="0.4s">
-                  <a class="btn btn-purple btn-rounded"><i class="fas fa-user left"></i> Sign up!</a>
-                  <a class="btn btn-outline-purple btn-rounded"><i class="fas fa-book left"></i> Learn more</a>
-                </div>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </header>
-  <!--Main Navigation-->
 
   <!--Main Layout-->
   <main>
@@ -585,122 +453,4 @@
   </main>
   <!--Main Layout-->
 
-
-  <!--Footer-->
-  <footer class="page-footer pt-4 mt-4   text-center text-md-left mt-5">
-
-    <!--Footer Links-->
-    <div class="container">
-      <div class="row">
-
-        <!--First column-->
-        <div class="col-md-3">
-          <h5 class="text-uppercase">Footer Content </h5>
-          <p>Here you can use rows and columns here to organize your footer content.</p>
-        </div>
-        <!--/.First column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Second column-->
-        <div class="col-md-2 ml-auto">
-          <h5 class="text-uppercase">Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#!">Link 1</a></li>
-            <li><a href="#!">Link 2</a></li>
-            <li><a href="#!">Link 3</a></li>
-            <li><a href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <!--/.Second column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Third column-->
-        <div class="col-md-2 ml-auto">
-          <h5 class="text-uppercase">Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#!">Link 1</a></li>
-            <li><a href="#!">Link 2</a></li>
-            <li><a href="#!">Link 3</a></li>
-            <li><a href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <!--/.Third column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Fourth column-->
-        <div class="col-md-2 ml-auto">
-          <h5 class="text-uppercase">Links</h5>
-          <ul class="list-unstyled">
-            <li><a href="#!">Link 1</a></li>
-            <li><a href="#!">Link 2</a></li>
-            <li><a href="#!">Link 3</a></li>
-            <li><a href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <!--/.Fourth column-->
-
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="container">
-      <!--Grid row-->
-      <div class="row mb-3">
-
-        <!--First column-->
-        <div class="col-md-12">
-
-          <ul class="list-unstyled d-flex justify-content-center mb-0 py-4 list-inline">
-            <li class="list-inline-item"><a class="p-2 m-2 fa-lg fb-ic"><i class="fab fa-facebook-f white-text fa-lg">
-                </i></a></li>
-            <li class="list-inline-item"><a class="p-2 m-2 fa-lg tw-ic"><i class="fab fa-twitter white-text fa-lg"> </i></a></li>
-            <li class="list-inline-item"><a class="p-2 m-2 fa-lg gplus-ic"><i class="fab fa-google-plus-g white-text fa-lg">
-                </i></a></li>
-            <li class="list-inline-item"><a class="p-2 m-2 fa-lg li-ic"><i class="fab fa-linkedin-in white-text fa-lg">
-                </i></a></li>
-            <li class="list-inline-item"><a class="p-2 m-2 fa-lg ins-ic"><i class="fab fa-instagram white-text fa-lg">
-                </i></a></li>
-            <li class="list-inline-item"><a class="p-2 m-2 fa-lg pin-ic"><i class="fab fa-pinterest white-text fa-lg">
-                </i></a></li>
-          </ul>
-
-        </div>
-        <!--/First column-->
-      </div>
-      <!--/Grid row-->
-    </div>
-    <!--/.Footer Links-->
-
-    <!--Copyright-->
-    <div class="footer-copyright py-3 text-center">
-      <div class="container-fluid">
-        © 2019 Copyright: <a href="https://mdbootstrap.com/docs/jquery/"> MDBootstrap.com </a>
-
-      </div>
-    </div>
-    <!--/.Copyright-->
-
-  </footer>
-  <!--/.Footer-->
-
-
-  <!--  SCRIPTS  -->
-  <!-- JQuery -->
-  <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
-  <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="../js/popper.min.js"></script>
-  <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-  <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="../js/mdb.min.js"></script>
-  <script>
-    new WOW().init();
-
-  </script>
-</body>
-
-</html>
+{% endblock %}
