Configurado template home e base, criado models featured

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -33,7 +33,7 @@
 {% block content %}{% endblock %}
 
 <!--Footer-->
-<footer class="page-footer pt-4 mt-4 text-center text-md-left mdb-color lighten-2">
+<footer class="page-footer pt-4 mt-4 text-center text-md-left lighten-2 text-light">
 
     <!--Footer Links-->
     {% include 'base/base_components/footer_links.html' %}
