--- a/templates/pages/components/streak.html
+++ b/templates/pages/components/streak.html
@@ -7,7 +7,7 @@
         <ul class="list-unstyled">
             <li>
                 <h1 class=" white-text">
-                    <strong>500+</strong> happy customers</h1>
+                    <strong>Cidade</strong> - UF</h1>
             </li>
 
         </ul>
