--- a/templates/base/base_components/footer_copyright.html
+++ b/templates/base/base_components/footer_copyright.html
@@ -3,7 +3,7 @@
 <!--Copyright-->
 <div class="footer-copyright py-3 text-center">
     <div class="container-fluid">
-        © 2019 Copyright: <a href="https://mdbootstrap.com/docs/jquery/"> MDBootstrap.com </a>
+        © 2019 Copyright: <a href="https://acompanhantes.me/"> ACOMPANHANTES<span class="pink-text font-weight-bold">.ME</span> </a>
 
     </div>
 </div>
