--- a/templates/base/base_components/footer_links.html
+++ b/templates/base/base_components/footer_links.html
@@ -5,53 +5,16 @@
     <div class="row">
 
         <!--First column-->
-        <div class="col-md-3">
-            <h5 class="text-uppercase">Footer Content </h5>
-            <p>Here you can use rows and columns here to organize your footer content.</p>
+        <div class="col-md-auto">
+            <h5 class="text-uppercase">ACOMPANHANTES<span class="pink-text font-weight-bold">.ME</span></h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident
+                voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus
+                veniam.</p>
         </div>
         <!--/.First column-->
 
         <hr class="w-100 clearfix d-md-none">
 
-        <!--Second column-->
-        <div class="col-md-2 ml-auto">
-            <h5 class="text-uppercase">Links</h5>
-            <ul class="list-unstyled">
-                <li><a href="#!">Link 1</a></li>
-                <li><a href="#!">Link 2</a></li>
-                <li><a href="#!">Link 3</a></li>
-                <li><a href="#!">Link 4</a></li>
-            </ul>
-        </div>
-        <!--/.Second column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Third column-->
-        <div class="col-md-2 ml-auto">
-            <h5 class="text-uppercase">Links</h5>
-            <ul class="list-unstyled">
-                <li><a href="#!">Link 1</a></li>
-                <li><a href="#!">Link 2</a></li>
-                <li><a href="#!">Link 3</a></li>
-                <li><a href="#!">Link 4</a></li>
-            </ul>
-        </div>
-        <!--/.Third column-->
-
-        <hr class="w-100 clearfix d-md-none">
-
-        <!--Fourth column-->
-        <div class="col-md-2 ml-auto">
-            <h5 class="text-uppercase">Links</h5>
-            <ul class="list-unstyled">
-                <li><a href="#!">Link 1</a></li>
-                <li><a href="#!">Link 2</a></li>
-                <li><a href="#!">Link 3</a></li>
-                <li><a href="#!">Link 4</a></li>
-            </ul>
-        </div>
-        <!--/.Fourth column-->
 
     </div>
 </div>
