--- a/templates/pages/components/gallery.html
+++ b/templates/pages/components/gallery.html
@@ -3,7 +3,7 @@
 <section class="section pb-3 wow fadeIn" data-wow-delay="0.3s">
 
     <!--Section heading-->
-    <h1 class="font-weight-bold text-center h1 my-5">Acompanhantes<strong>.me</strong></h1>
+    <h1 class="font-weight-normal text-center h1 my-5">ACOMPANHANTES<span class="pink-text font-weight-bold">.ME</span></h1>
     <!--Section description-->
     <p class="text-center grey-text mb-5 mx-auto w-responsive">Lorem ipsum dolor sit amet, consectetur
         adipisicing elit. Fugit, error amet numquam iure provident voluptate esse
