--- a/templates/pages/home_page.html
+++ b/templates/pages/home_page.html
@@ -16,12 +16,7 @@
             {% include 'pages/components/slider.html' %}
             <!--Section: Slider -->
 
-            <hr class="mb-5 mt-4">
-
-            <!--Section: Gallery -->
-            {% include 'pages/components/gallery.html' %}
-            <!--Section: Gallery -->
-
+            {#<hr class="mb-5 mt-4">#}
 
         </div>
 
@@ -31,9 +26,9 @@
 
         <div class="container">
 
-            <!--Projects section v.4-->
-            {% include 'pages/components/projects.html' %}
-            <!--Projects section v.4-->
+            <!--Section: Gallery -->
+            {% include 'pages/components/gallery.html' %}
+            <!--Section: Gallery -->
 
         </div>
 
