--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,7 +7,7 @@
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Material Design Bootstrap Template</title>
+    <title>ACOMPANHANTES.ME</title>
 
     <!--  CSS  -->
     {% include 'base/base_components/css.html' %}
